# spring_embeders-main

./: .gitignore  CMakeLists.txt  README.md  animate.py  batch_visualise.py  benchmark_plot.py  plot_quadtree.py  plot_results.py  visualise.py
Include/: barnes_hut.hpp  exporter.hpp  graph.hpp  layout_engine.hpp  parser.hpp  quadtree.hpp
Input/: The Cubical Graph  Q3 (8 Nodes).txt  The Octahedral Graph (6 Nodes).txt  The Petersen Graph (10 Nodes).txt  graph_1036_adjacency_list.txt
src/: batch.cpp  benchmark.cpp  main.cpp
